// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumAuthProvider authenticate 1`] = `"0x92d414fa574ea420dae28a58454aaed02cab50ff2c13f0af728cfd15e4816ca5"`;

exports[`EthereumAuthProvider createLink 1`] = `
Object {
  "account": "eip155:1337:0x8fe2c4516e920425e177658aaac451ca0463ed69",
  "message": "Link this account to your identity

did:3:bafysdfwefwe 
Timestamp: 0",
  "signature": "0x4b71ddc9261244b86d19588c828b5867bf4cda399183190ecca86fbd1b3803c16b2158118a75f99cdf2a0e41bb61afde137c5e300c28301fc1db7c85349b49d31b",
  "timestamp": 0,
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`Ocap requestCapability 1`] = `
Object {
  "message": "self.id wants you to sign in with your Ethereum account: 
0x8fe2c4516e920425e177658aaac451ca0463ed69

Give this app access to your streams

URI: did:pkh:eip155:1:0x8fe2c4516e920425e177658aaac451ca0463ed69 
Version: 1 
Chain ID: eip155:1337 
Nonce: 12345678 
Issued At: 2021-10-14T07:18:41Z 
Resources: 
- ceramic://kjzl6cwe1jw147dvq16zluojmraqvwdmbh61dx9e0c59i344lcrsgqfohexp60s 
",
  "signature": "0xd008043db6b85beffb4dc0c8d1371f55ac1d1f31716385f7b5d14457a700453309d2fe9f0f2278140638b000877b7b073f036c34eb0efdd23e6768cdc02e72761c",
}
`;

exports[`authenticate correctly sign auth message 1`] = `"0xcf54e7560501fa53e3f7092672a920c346034ba93d001919f0cb5445851b5685"`;

exports[`createLink create erc1271 proof correctly 1`] = `
Object {
  "account": "eip155:1337:0xbe6c27620b271dd76f1787cdef1f4375cff3fa1f",
  "message": "Link this account to your identity

did:3:bafysdfwefwe",
  "signature": "0x39b83baea57e2e7ca49e904a145758d791086074cdc83d2824a65aef1a89ba397e20c32f9e60a6b1a232de3bd89b39537e3ef676ae750b1cd79266147a4312d01c",
  "type": "erc1271",
  "version": 2,
}
`;

exports[`createLink create ethereumEOA proof correctly 1`] = `
Object {
  "account": "eip155:1:0x8fe2c4516e920425e177658aaac451ca0463ed69",
  "message": "Link this account to your identity

did:3:bafysdfwefwe",
  "signature": "0x39b83baea57e2e7ca49e904a145758d791086074cdc83d2824a65aef1a89ba397e20c32f9e60a6b1a232de3bd89b39537e3ef676ae750b1cd79266147a4312d01c",
  "type": "ethereum-eoa",
  "version": 2,
}
`;

exports[`createLink throw if erc1271 is on wrong chain 1`] = `[Error: ChainId in provider (1337) is different from AccountId (123)]`;
